# hhvm-third-party

./: .gitignore  .gitmodules  .travis.sh  .travis.yml  CMakeLists.txt  LICENSE  PATENTS  README.md  third_party_notices.txt
boost/: CMakeLists.txt
brotli/: CMakeLists.txt
double-conversion/: CMakeLists.txt
double-conversion/src/double-conversion/: utils.h
fastlz/: CMakeLists.txt
fb-mysql/: CMakeLists.txt
fizz/: CMakeLists.txt
folly/: CMakeLists.txt
folly/patches/: 5b5195.patch
googletest/: CMakeLists.txt
jemalloc/: CMakeLists.txt
libafdt/: CMakeLists.txt  Makefile.in  aclocal.m4  config.h.in  configure
libafdt/src/: async.c
libafdt/test/: catter.c  server.c
libmbfl/: .gitignore  CMakeLists.txt  config.h.cmake
libmbfl/filters/: CMakeLists.txt  mbfilter_big5.c  mbfilter_cp5022x.c  mbfilter_cp936.c  mbfilter_gb18030.c  mbfilter_htmlent.c  mbfilter_htmlent.h  mbfilter_iso2022_jp_ms.c  mbfilter_iso2022jp_mobile.c
libmbfl/mbfl/: CMakeLists.txt  generate-eaw-table.sh  mbfilter.c  mbfl_consts.h  mbfl_defs.h  mbfl_memory_device.c  mbfl_memory_device.h  mk_eaw_tbl.awk
libmbfl/nls/: CMakeLists.txt
libsodium/: CMakeLists.txt
libsqlite3/: CMakeLists.txt
libzip/: CMakeLists.txt  cmake-zipconf.h.in  zipint.h
lz4/: CMakeLists.txt
mcrouter/: CMakeLists.txt  McAsciiParser-gen.cpp  ascii_client.c  config-impl.h  config.h
mcrouter/gen-cpp2/: mc_caret_protocol_constants.cpp  mc_caret_protocol_constants.h  mc_caret_protocol_types.cpp  mc_caret_protocol_types.h  mc_caret_protocol_types.tcc  mc_caret_protocol_types_custom_protocol.h
mvfst/: CMakeLists.txt
ocaml/: CMakeLists.txt  checksum  fetch_and_setup_src.sh
ocaml/opam_deps/: cleanup_src_ext.sh  prep_deps.sh
opam/: CMakeLists.txt
pcre/: CMakeLists.txt
proxygen/: CMakeLists.txt  gen-common-header.sh
proxygen/lib/services/: Acceptor.cpp  Acceptor.h  AcceptorConfiguration.h  ConnectionManager.cpp  ConnectionManager.h  ManagedConnection.cpp  ManagedConnection.h  TcpEventsConfig.cpp
proxygen/lib/transport/: TransportInfo.cpp  TransportInfo.h
proxygen/lib/utils/: SocketOptions.cpp  SocketOptions.h  Time.h
proxygen/lib/workers/: WorkerThread.cpp  WorkerThread.h
ragel/: CMakeLists.txt
ragel/src/ragel/: config.h  fsmbase.cpp  rbxgoto.cpp  redfsm.cpp
re2/: CMakeLists.txt
rsocket-cpp/: CMakeLists.txt
rustc/: CMakeLists.txt
squangle/: CMakeLists.txt  src
thrift/: CMakeLists.txt
thrift/lib/cpp/: config.h  portability.h
thrift/lib/cpp/async/: TAsyncSocket.cpp  TEventBase.h  TEventFDWrapper.h  TNotificationQueue.h
thrift/lib/cpp/concurrency/: Mutex.cpp  ThreadManager.h  Util.cpp
thrift/lib/cpp/transport/: TSocketAddress.h
thrift/lib/cpp/util/: pthread-timed-lock-shim.h
ti/proxygen/lib/services/: Acceptor.cpp
ti/proxygen/lib/workers/: WorkerThread.cpp
timelib/: CMakeLists.txt  hphp.patch  parse_date.c  parse_date.re  parse_iso_intervals.c  parse_tz.c  timelib.c  timelib.h  timelib.m4  timelib_structs.h  tm2unixtime.c
util/: make-notices.hack  make-notices.hh
wangle/: CMakeLists.txt
webscalesqlclient/: CMakeLists.txt  src
winlib/: dlfcn.h  minwin.h  mman.c  poll.h  unistd.c  unistd.h  util.c  wait.h
winlib/sys/: mman.h  socket.h  time.h  uio.c  uio.h
winpthreads/: CMakeLists.txt  README.md
winpthreads/include/: pthread.h
winpthreads/src/: barrier.c  misc.h  rwlock.c  spinlock.c  thread.c  version.aps  version.rc
winpthreads/src/libgcc/: dll_math.c
winpthreads/tests_pthread/: barrier3.c  cancel9.c  exception1.c  filename.txt
zstd/: CMakeLists.txt
