cmake_minimum_required(VERSION 2.8.0)
project(squangle CXX C)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wno-unused-variable")
auto_sources(files "*.cpp" "RECURSE" "${CMAKE_CURRENT_SOURCE_DIR}/src")
include_directories("${CMAKE_CURRENT_SOURCE_DIR}/src" ${RE2_INCLUDE_DIR} ${MYSQL_INCLUDE_DIR})
add_library(squangle STATIC ${files})
add_dependencies(squangle webscalesqlclient)
target_link_libraries(squangle ${RE2_LIBRARY} ${MYSQL_CLIENT_LIBS} folly)
