cmake_minimum_required(VERSION 2.8.0)
set(SQUANGLE_DIR "${CMAKE_CURRENT_SOURCE_DIR}/src/squangle")

project(squangle CXX C)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wno-unused-variable")
auto_sources(files "*.cpp" "RECURSE" "${SQUANGLE_DIR}")
include_directories(${CMAKE_CURRENT_SOURCE_DIR} ${RE2_INCLUDE_DIR} ${MYSQL_INCLUDE_DIR})
add_library(squangle STATIC ${files})
add_dependencies(squangle webscalesqlclient)
target_link_libraries(squangle ${MYSQL_CLIENT_LIBS} folly re2)
